- Styling: Fixed disabled select text color for dark mode in v2.

--- a/RockWeb/Styles/styles-v2/core.css
+++ b/RockWeb/Styles/styles-v2/core.css
@@ -16847,7 +16847,7 @@ iframe.file-browser {
 }
 
 .ant-select-disabled.ant-select:not(.ant-select-customize-input) .ant-select-selector {
-  color: rgba(0, 0, 0, 0.25);
+  color: var(--color-interface-stronger);
   background: var(--color-interface-softer);
   cursor: not-allowed;
 }
@@ -16974,7 +16974,7 @@ iframe.file-browser {
   width: 12px;
   height: 12px;
   margin-top: -6px;
-  color: rgba(0, 0, 0, 0.25);
+  color: var(--color-interface-stronger);
   font-size: var(--font-size-xsmall);
   font-style: normal;
   line-height: 1;
@@ -17046,7 +17046,7 @@ iframe.file-browser {
 }
 
 .ant-select-dropdown-empty {
-  color: rgba(0, 0, 0, 0.25);
+  color: var(--color-interface-stronger);
 }
 
 .ant-select-item-empty {
@@ -17058,7 +17058,7 @@ iframe.file-browser {
   font-weight: normal;
   font-size: var(--font-size-small);
   line-height: 22px;
-  color: rgba(0, 0, 0, 0.25);
+  color: var(--color-interface-stronger);
 }
 
 .ant-select-item {
@@ -17110,7 +17110,7 @@ iframe.file-browser {
 }
 
 .ant-select-item-option-disabled {
-  color: rgba(0, 0, 0, 0.25);
+  color: var(--color-interface-stronger);
   cursor: not-allowed;
 }
 
